# psa

./: LICENSE  README.md  pyproject.toml  settings.yaml
docs/: rules_metadata.json
psa/: entity.py  main.py  nodes.py  pipeline.py  runner.py  utils.py
psa/diff/: lcom.py  side_effect.py  tcc.py
psa/index/: collector.py  extractor.py  maps.py  scopes.py
psa/metrics/: __init__.py  base.py  classes.py  funcs.py  lcom.py  side_effect.py  tcc.py
psa/reporters/: base.py  console.py
psa/rules/: base.py  engine.py  lcom.py  side_effect.py  tcc.py
scripts/: gen_docs.py
src/: entity.py  main.py  node.py  pipeline.py  runner.py  utils.py
src/analysis/: class_info.py  lcom.py  side_effect.py  tcc.py
src/builders/: ast_builder.py  call.py  dataflow.py
src/config/: rules.py
src/diff/: lcom.py  side_effect.py  tcc.py
src/extractors/: node.py
src/index/: call.py  collector.py  data.py  extractor.py  maps.py  parents.py  scopes.py
src/metrics/: base.py  classes.py  funcs.py  lcom.py  side_effect.py  tcc.py
src/reporters/: console.py
src/rules/: __init__.py  base.py  engine.py  lcom.py  registry.py  side_effect.py  tcc.py
