[project]
name = "fent"
version = "0.1.0"
description = "Python tool for semantic code analysis."
authors = [
    {name = "xifOO",email = "wedyi28111@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.5,<0.15.0)"
]
